--- a/build.gradle
+++ b/build.gradle
@@ -1,38 +1,52 @@
 plugins {
     id 'java'
-    id 'io.qameta.allure' version '2.9.6'
-    id 'io.freefair.lombok' version '5.3.0'
-}
-
-allure {
-    version = '2.16.1'
-
-    useJUnit5 {
-        version = '2.16.1'
-    }
+    id 'io.qameta.allure' version '2.8.1'
+    id 'io.freefair.lombok' version '5.2.1'
 }
 
 group 'ru.netology'
 version '1.0-SNAPSHOT'
 
+sourceCompatibility = 11
+compileJava.options.encoding = 'UTF-8'
+compileTestJava.options.encoding = 'UTF-8'
+
 repositories {
     mavenCentral()
 }
 
+allure {
+    autoconfigure = true
+    version = '2.14.0'
+
+    useJUnit5 {
+        version = '2.14.0'
+    }
+}
+
+configurations {
+    testCompile
+}
+
 dependencies {
-    implementation 'org.projectlombok:lombok:1.18.22'
-    implementation 'org.projectlombok:lombok:1.18.22'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
-    testImplementation 'mysql:mysql-connector-java:8.0.22'
-    testImplementation 'org.postgresql:postgresql:42.2.19'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
+    testImplementation 'com.codeborne:selenide:5.23.0'
+    testImplementation 'mysql:mysql-connector-java:8.0.25'
+    testImplementation 'org.postgresql:postgresql:42.2.14'
     testImplementation 'commons-dbutils:commons-dbutils:1.7'
-    testImplementation 'com.codeborne:selenide:5.19.0'
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
-    testImplementation 'io.qameta.allure:allure-selenide:2.19.0'
+    testImplementation 'io.qameta.allure:allure-selenide:2.14.0'
     testImplementation 'io.rest-assured:rest-assured:4.3.0'
+    testImplementation 'org.slf4j:slf4j-simple:1.7.30'
+    compileOnly 'org.projectlombok:lombok:1.18.20'
+
 }
 
 test {
     useJUnitPlatform()
     systemProperty 'selenide.headless', System.getProperty('selenide.headless')
+    systemProperty 'database.url', System.getProperty('database.url')
+    systemProperty 'database.name', System.getProperty('database.name')
+    systemProperty 'database.password', System.getProperty('database.password')
+    systemProperty 'sut.url', System.getProperty('sut.url', 'http://localhost:8080')
 }
